[k8s] Create inter-host environment

--- a/kubernetes/memaslap.yaml
+++ b/kubernetes/memaslap.yaml
@@ -19,4 +19,6 @@ spec:
                                   image: jiyoulee/memaslap:default
                                   command: ["/bin/bash"]
                                   stdin: true
-                                  tty: true 
+                                  tty: true
+                        nodeSelector:
+                                server: "4"
